--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 <body class="bg-dark-gray text-text-light">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div class="w-sceen min-h-screen d-flex flex-row flex-wrap items-center justify-center" id="root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
